--- a/src/Pages/Homepage/Homepage.module.scss
+++ b/src/Pages/Homepage/Homepage.module.scss
@@ -222,9 +222,10 @@
             align-items: center;
 
             .sectionLink {
-                color: #0073CA;
+                color: #009DE2;
                 font-size: 20px;
                 line-height: 24px;
+                font-weight: 500;
             }
 
             .sectionMainHeader {
