--- a/src/Pages/Homepage/Homepage.module.scss
+++ b/src/Pages/Homepage/Homepage.module.scss
@@ -62,7 +62,7 @@
     }
 }
 
-.section1.heroBanner {
+.section1 {
     position: relative;
 
     img{
@@ -120,6 +120,8 @@
             color: white;
             opacity: 0.9;
             font-size: 14px;
+            letter-spacing: 0.2px;
+            font-weight: 500;
         }
 
         .requestDemoButton {
@@ -277,6 +279,165 @@
                 line-height: 14px;
                 font-size: 18px;
             }
+        }
+    }
+}
+
+.section4 {
+    height: 100vh;
+
+    .container {
+        width: 80vw;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 100px auto;
+
+        .headingContainer {
+            width: 100%;
+            margin-bottom: 20px;
+            .heading {
+                line-height: 72px;
+                height: 134px;
+                width: 475px;
+                font-weight: 700;
+                font-size: 50px;
+                span {
+                    display: block;
+                    opacity: 0.9;
+                    color: black;
+                }
+
+                span:nth-of-type(2) {
+                    color: #0097df;
+                    letter-spacing: 1px;
+                }
+            }
+        }
+
+        .advantageContainer {
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+
+            .advantages {
+                width: 49%;
+                display: flex;
+                justify-content: space-between;
+
+                .advantagesSection1,
+                .advantagesSection2 {
+                    .advantagesBox {
+                        height: auto;
+                        width: 240px;
+                        margin: 20px 0;
+                        background: #f8f9fa;
+                        border-radius: 16px;
+                        display: flex;
+                        justify-content: flex-start;
+                        align-items: center;
+                        padding: 15px 10px 15px 20px;
+
+                        .advantagesBoxContent {
+                            width: 200px;
+                            opacity: 0.7;
+                            font-weight: 400;
+                            color: #000000;
+                            font-size: 20px;
+                            letter-spacing: 0.15px;
+                            line-height: 27px;
+                        }
+                    }
+                }
+            }
+
+            .advantageImage {
+                width: 40%;
+
+                img {
+                    height: 341px;
+                    width: 450px;
+                }
+            }
+        }
+    }
+}
+
+.section5 {
+    height: 372px;
+    position: relative;
+    background-color: #F2F3F5;
+
+    .container {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .headingContainer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .heading {
+                color: #232323;
+                font-weight: 600;
+                font-size: 60px;
+                letter-spacing: 0;
+                line-height: 90px;
+                margin: 20px 0;
+            }
+
+            .headingCaption {
+                opacity: 0.8;
+                color: #232323;
+                font-weight: 600;
+                font-size: 20px;
+                letter-spacing: 0;
+                line-height: 30px;
+            }
+
+            .requestButton {
+                button {
+                    height: 50px;
+                    width: 195px;
+                    margin: 30px 0;
+                    background: linear-gradient(222.69deg, #00A1E4 0%, #0037A9 100%);
+                    border-radius: 4px;
+                    border: none;
+                    color: white;
+                    opacity: 0.9;
+                    font-size: 14px;
+                    letter-spacing: 0.2px;
+                    font-weight: 500;
+                }
+            }
+        }
+    }
+
+    .upwardButton {
+        position: absolute;
+        bottom: 14%;
+        right: 4%;
+        height: 50px;
+        width: 50px;
+        border-radius: 8px;
+        background: #030303;
+        opacity: 0.8;
+        color: white;
+
+        a {
+            height: 100%;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        &:hover {
+            cursor: pointer;
         }
     }
 }
